# jmaxml

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dictionary.json  go.mod  pyproject.toml
.github/: FUNDING.yml  codecov.yml
.github/workflows/: Test.yml
assets/: Cargo.toml  README.md
assets/sample_json/: 01_01_01_091210_VGSK50.json  01_01_02_091210_VGSK50.json  01_01_03_091210_VGSK50.json  02_01_01_201224_VGSK55.json  02_02_01_201224_VGSK55.json  02_03_01_201224_VGSK55.json  02_03_02_201224_VGSK55.json  02_04_01_201224_VGSK55.json  02_04_02_201224_VGSK55.json  03_01_01_091210_VGSK60.json  03_01_02_091210_VGSK60.json  03_01_03_091210_VGSK60.json  05_01_01_100806_VGUV50.json  06_01_01_100514_VPTI50.json  06_02_01_100514_VPTI50.json  06_03_01_200630_VPTI50.json  06_04_01_200826_VPTI50.json  06_04_02_200826_VPTI50.json  06_04_03_200826_VPTI50.json  06_04_04_200826_VPTI50.json  07_01_01_100514_VPTI51.json  07_01_02_100514_VPTI51.json  07_02_01_100806_VPTI51.json  07_03_01_100514_VPTI51.json  07_04_01_200826_VPTI51.json  07_04_02_200826_VPTI51.json  07_04_03_200826_VPTI51.json  07_04_04_200826_VPTI51.json  08_01_01_110126_VPTI52.json  08_01_02_100806_VPTI52.json  09_01_01_091210_VPTW40.json  09_01_02_091210_VPTW40.json  09_01_03_091210_VPTW40.json  09_01_04_091210_VPTW40.json  09_01_05_091210_VPTW40.json  09_01_06_091210_VPTW40.json  09_01_07_091210_VPTW40.json  09_01_08_100917_VPTW40.json  09_01_09_091210_VPTW40.json  09_01_10_091210_VPTW40.json  (+502 more)
assets/sample_xmls/: 01_01_01_091210_VGSK50.xml  01_01_02_091210_VGSK50.xml  01_01_03_091210_VGSK50.xml  02_01_01_201224_VGSK55.xml  02_02_01_201224_VGSK55.xml  02_03_01_201224_VGSK55.xml  02_03_02_201224_VGSK55.xml  02_04_01_201224_VGSK55.xml  02_04_02_201224_VGSK55.xml  03_01_01_091210_VGSK60.xml  03_01_02_091210_VGSK60.xml  03_01_03_091210_VGSK60.xml  05_01_01_100806_VGUV50.xml  06_01_01_100514_VPTI50.xml  06_02_01_100514_VPTI50.xml  06_03_01_200630_VPTI50.xml  06_04_01_200826_VPTI50.xml  06_04_02_200826_VPTI50.xml  06_04_03_200826_VPTI50.xml  06_04_04_200826_VPTI50.xml  07_01_01_100514_VPTI51.xml  07_01_02_100514_VPTI51.xml  07_02_01_100806_VPTI51.xml  07_03_01_100514_VPTI51.xml  07_04_01_200826_VPTI51.xml  07_04_02_200826_VPTI51.xml  07_04_03_200826_VPTI51.xml  07_04_04_200826_VPTI51.xml  08_01_01_110126_VPTI52.xml  08_01_02_100806_VPTI52.xml  09_01_01_091210_VPTW40.xml  09_01_02_091210_VPTW40.xml  09_01_03_091210_VPTW40.xml  09_01_04_091210_VPTW40.xml  09_01_05_091210_VPTW40.xml  09_01_06_091210_VPTW40.xml  09_01_07_091210_VPTW40.xml  09_01_08_100917_VPTW40.xml  09_01_09_091210_VPTW40.xml  09_01_10_091210_VPTW40.xml  (+516 more)
assets/schema/: dictionary.json  jmaxml_20240821_dictionary.xls  jmaxml_20241031_dictionary.xls  jmaxml_20250630_dictionary.xls  jmx.xsd  jmx_add.xsd  jmx_eb.xsd  jmx_eb_nullable.xsd  jmx_ib.xsd  jmx_mete.xsd  jmx_seis.xsd  jmx_volc.xsd
assets/src/: generate_samples.rs  main.rs
deprecated/jmaxml-go/: README.md  custom_types_test.go  go.mod  types_jmx_volc.go  utils.go  utils_test.go
deprecated/jmaxml-py/: pyproject.toml
deprecated/jmaxml-py/jmaxml/: jmx_types.py  utils.py
jmaxml-go/: custom_types.go  types_jmx.go  types_jmx_eb.go  types_jmx_ib.go  types_jmx_mete.go  types_jmx_seis.go  types_jmx_volc.go  utils_test.go
jmaxml-json-types/: LICENSE  index.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
jmaxml-json-types/tests/: validate.spec.ts
jmaxml-json-types/tests/fixtures/: 01_01_01_091210_VGSK50.json  01_01_02_091210_VGSK50.json  01_01_03_091210_VGSK50.json  02_01_01_201224_VGSK55.json  02_02_01_201224_VGSK55.json  02_03_01_201224_VGSK55.json  02_03_02_201224_VGSK55.json  02_04_01_201224_VGSK55.json  02_04_02_201224_VGSK55.json  03_01_01_091210_VGSK60.json  03_01_02_091210_VGSK60.json  03_01_03_091210_VGSK60.json  05_01_01_100806_VGUV50.json  06_01_01_100514_VPTI50.json  06_02_01_100514_VPTI50.json  06_03_01_200630_VPTI50.json  06_04_01_200826_VPTI50.json  06_04_02_200826_VPTI50.json  06_04_03_200826_VPTI50.json  06_04_04_200826_VPTI50.json  07_01_01_100514_VPTI51.json  07_01_02_100514_VPTI51.json  07_02_01_100806_VPTI51.json  07_03_01_100514_VPTI51.json  07_04_01_200826_VPTI51.json  07_04_02_200826_VPTI51.json  07_04_03_200826_VPTI51.json  07_04_04_200826_VPTI51.json  08_01_01_110126_VPTI52.json  08_01_02_100806_VPTI52.json  09_01_01_091210_VPTW40.json  09_01_02_091210_VPTW40.json  09_01_03_091210_VPTW40.json  09_01_04_091210_VPTW40.json  09_01_05_091210_VPTW40.json  09_01_06_091210_VPTW40.json  09_01_07_091210_VPTW40.json  09_01_08_100917_VPTW40.json  09_01_09_091210_VPTW40.json  09_01_10_091210_VPTW40.json  (+463 more)
jmaxml-py/: README.md
jmaxml-py/jmaxml/: __init__.py  custom_types.py  jmx_types.py
jmaxml-py/tests/: test_custom_types.py  test_examples.py
jmaxml-rs/: .gitignore  Cargo.toml  README.md  package-lock.json
jmaxml-rs/examples/: load.rs  make_json.rs
jmaxml-rs/src/: lib.rs  loader.rs  parser.rs
jmaxml-rs/src/model/: builtins.rs  generated.rs  mod.rs
jmaxml-rs/src/parser/: mod.rs
jmaxml-rs/tests/: make_json.rs  parser_test.rs
jmaxml-ts/: README.md  jmaxml.ts
jmaxml-wasm/: Cargo.toml  LICENSE  README.md  build.sh  package-lock.json  patch_esm.py
jmaxml-wasm/src/: lib.rs
jmx_codegen/: README.md  __init__.py  __main__.py  dictionary.py  schema.py  types.py
jmx_codegen/langs/: common.py  go.py  python.py  typescript.py
jmx_codegen/languages/: common.py  go.py  python.py  rust.py  typescript.py  typescript_json.py
src/jmaxml/: __init__.py
