[workspace]
members = [
    "jmaxml-rs",
    "jmaxml-wasm",
]
resolver = "3"

[workspace.package]
authors = ["Taku Fukada <naninunenor@gmail.com>", "MIERUNE Inc. <info@mierune.co.jp>"]
version = "0.1.13"
edition = "2024"
repository = "https://github.com/MIERUNE/jmaxml"
license = "MIT OR Apache-2.0"
