[project]
name = "jmx-codegen"
version = "0.1.0"
description = "気象庁防災情報XMLを型付きで読むためのライブラリ"
authors = [
    { name = "MIERUNE Inc.", email = "info@mierune.co.jp" },
    { name = "Taku Fukada", email = "naninunenor@gmail.com" }
]
classifiers = ["Private :: Do not Upload"]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.workspace]
members = ["jmaxml-py"]

[tool.rye]
managed = true
dev-dependencies = [
    "pandas>=2.2.2",
    "xlrd>=2.0.1",
    "lxml>=5.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jmx_codegen"]
