[project]
name = "jmaxml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "ruff>=0.11.13",
    "xlrd>=2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jmx_codegen"]

[project.scripts]
jmx_codegen = "jmx_codegen:main"
