[package]
name = "jmaxml-sample-builder"
description = "Builds test artifacts for JMA (Japan Meteorological Agency) XML format files"
version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "generate_samples"
path = "src/generate_samples.rs"

[dependencies]
jmaxml = { path = "../jmaxml-rs"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
glob = "0.3.2"

