[package]
name = "jmaxml"
version = "0.1.3"
edition = "2024"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
iso8601-duration = { version = "0.2.0", features = ["chrono", "serde"] }
serde = { version = "1.0.204", features = ["derive"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde_json = "1.0.122"

[dev-dependencies]
glob = "0.3.1"
serde_json = "1.0.122"
