[package]
name = "jmaxml"
description = "Parse Japan Meteorological Agency's XML Format files"
version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
iso8601-duration = { version = "0.2.0", features = ["chrono", "serde"] }
serde = { version = "1.0.204", features = ["derive"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde_json = "1.0.122"

[dev-dependencies]
glob = "0.3.1"
