[package]
name = "jmaxml"
description = "A parser for JMA (Japan Meteorological Agency) XML format files"
version.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
iso8601-duration = { version = "0.2.0", features = ["chrono", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde_json = "1.0.141"

[dev-dependencies]
glob = "0.3.2"
