[package]
name = "jmaxml-wasm"
version = "0.1.4"
authors = ["MIERUNE Inc. <info@mierune.co.jp>", "Taku Fukada <naninunenor@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.93"
jmaxml = { path = "../jmaxml-rs" }
serde-wasm-bindgen = "0.6.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
