[package]
name = "jmaxml-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "MIT"
repository = "https://github.com/ciscorn/jmaxml"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
jmaxml = { path = "../jmaxml-rs" }
serde-wasm-bindgen = "0.6.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
