[project]
name = "jmaxml"
version = "0.1.0"
description = "気象庁防災情報XMLを型付きで読むためのライブラリ"
authors = [
    { name = "Taku Fukada", email = "naninunenor@gmail.com" }
]
dependencies = [
    "lxml>=5.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["jmaxml"]
